--- a/game engine + cryoscom.vcxproj
+++ b/game engine + cryoscom.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="EnemyAI.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="Gear.cpp" />
+    <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -35,7 +36,6 @@
     <ClCompile Include="ObjectPool.cpp" />
     <ClCompile Include="Serializable.cpp" />
     <ClCompile Include="serializationUtils.cpp" />
-    <ClCompile Include="Skill.cpp" />
     <ClCompile Include="ToolTip.cpp" />
     <ClCompile Include="unit.cpp" />
     <ClCompile Include="unitManager.cpp" />
@@ -46,10 +46,11 @@
     <ClInclude Include="AnimatorSprite.h" />
     <ClInclude Include="AttackAndDefence.h" />
     <ClInclude Include="Bullet.h" />
-    <ClInclude Include="cryoscom_defs.h" />
+    <ClInclude Include="cryoscom_defsAndUtils.h" />
     <ClInclude Include="EnemyAI.h" />
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="Gear.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuItem.h" />
@@ -59,7 +60,6 @@
     <ClInclude Include="ObjectPool.h" />
     <ClInclude Include="Serializable.h" />
     <ClInclude Include="serializationUtils.h" />
-    <ClInclude Include="Skill.h" />
     <ClInclude Include="ToolTip.h" />
     <ClInclude Include="unit.h" />
     <ClInclude Include="unitManager.h" />
@@ -87,6 +87,8 @@
     <None Include="defaultScript.py" />
     <None Include="gameSerializationUtils.dll" />
     <None Include="MyPythonClass.py" />
+    <None Include="persistentData.py" />
+    <None Include="shared_data.py" />
     <None Include="test_GS.py" />
   </ItemGroup>
   <ItemGroup>
