--- a/game engine + cryoscom.vcxproj
+++ b/game engine + cryoscom.vcxproj
@@ -26,6 +26,7 @@
     <ClCompile Include="EnemyAI.cpp" />
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="Gear.cpp" />
+    <ClCompile Include="globalMutexes.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
@@ -50,6 +51,7 @@
     <ClInclude Include="EnemyAI.h" />
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="Gear.h" />
+    <ClInclude Include="globalMutexes.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menu.h" />
@@ -87,7 +89,6 @@
     <None Include="defaultScript.py" />
     <None Include="gameSerializationUtils.dll" />
     <None Include="MyPythonClass.py" />
-    <None Include="persistentData.py" />
     <None Include="shared_data.py" />
     <None Include="test_GS.py" />
   </ItemGroup>
@@ -103,6 +104,7 @@
     <Text Include="map1.txt" />
     <Text Include="map2.txt" />
     <Text Include="master.txt" />
+    <Text Include="message passing docs.txt" />
     <Text Include="oldMap2.txt" />
     <Text Include="progression.txt" />
   </ItemGroup>
