--- a/game engine + cryoscom.vcxproj
+++ b/game engine + cryoscom.vcxproj
@@ -21,7 +21,6 @@
   <ItemGroup>
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="AnimatorSprite.cpp" />
-    <ClCompile Include="AttackAndDefence.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="EnemyAI.cpp" />
     <ClCompile Include="fileLoader.cpp" />
@@ -36,7 +35,8 @@
     <ClCompile Include="MenuItem.cpp" />
     <ClCompile Include="MessageBus.cpp" />
     <ClCompile Include="MessagingComponent.cpp" />
-    <ClCompile Include="ObjectPool.cpp" />
+    <ClCompile Include="Parsable.cpp" />
+    <ClCompile Include="PlayerInventory.cpp" />
     <ClCompile Include="Serializable.cpp" />
     <ClCompile Include="serializationUtils.cpp" />
     <ClCompile Include="ToolTip.cpp" />
@@ -47,7 +47,6 @@
   <ItemGroup>
     <ClInclude Include="Animator.h" />
     <ClInclude Include="AnimatorSprite.h" />
-    <ClInclude Include="AttackAndDefence.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="cryoscom_defsAndUtils.h" />
     <ClInclude Include="EnemyAI.h" />
@@ -63,7 +62,8 @@
     <ClInclude Include="Message.h" />
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="MessagingComponent.h" />
-    <ClInclude Include="ObjectPool.h" />
+    <ClInclude Include="Parsable.h" />
+    <ClInclude Include="PlayerInventory.h" />
     <ClInclude Include="Serializable.h" />
     <ClInclude Include="serializationUtils.h" />
     <ClInclude Include="ToolTip.h" />
@@ -78,8 +78,10 @@
     <Image Include="cryo_area_1.png" />
     <Image Include="Cryo_area_2_WIP.png" />
     <Image Include="enemyAI.png" />
-    <Image Include="EngieNWwalkANIM.png" />
-    <Image Include="level1.png" />
+    <Image Include="Engiewalk_back_left.png" />
+    <Image Include="Engiewalk_back_right.png" />
+    <Image Include="Engiewalk_front_left.png" />
+    <Image Include="Engiewalk_front_right.png" />
     <Image Include="level1_v2.png" />
     <Image Include="mapTex.png" />
     <Image Include="player.png" />
@@ -94,8 +96,6 @@
     <None Include="decomposedData_python.py" />
     <None Include="defaultScript.py" />
     <None Include="gameSerializationUtils.dll" />
-    <None Include="MyPythonClass.py" />
-    <None Include="shared_data.py" />
     <None Include="test_GS.py" />
   </ItemGroup>
   <ItemGroup>
