--- a/game engine + cryoscom.vcxproj
+++ b/game engine + cryoscom.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="GameMain.cpp" />
     <ClCompile Include="Gear.cpp" />
     <ClCompile Include="globalMutexes.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="LevelMaker.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -54,6 +55,7 @@
     <ClInclude Include="GameMain.h" />
     <ClInclude Include="Gear.h" />
     <ClInclude Include="globalMutexes.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="LevelMaker.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Map.h" />
